--- a/index.html
+++ b/index.html
@@ -106,6 +106,52 @@
     </section>
   </main>
 
+  <!-- GIFT SCROLL SECTION -->
+<section class="gift-strip" id="gift-strip">
+  <div class="gift-head">
+    <div class="gift-kicker">C-LUXURY</div>
+    <div class="gift-sub">Create it. Share it. Get gifted.</div>
+  </div>
+
+  <div class="gift-scroller" id="giftScroller" aria-label="C-LUXURY gift banners">
+    <!-- 1 -->
+    <article class="gift-card" data-loop="start">
+      <div class="gift-label"><em>C-LUXURY WISHLIST</em></div>
+      <div class="gift-img" style="background-image:url('assets/gift-1.jpg')"></div>
+    </article>
+
+    <!-- 2 -->
+    <article class="gift-card">
+      <div class="gift-label"><em>GIFTS FOR HER</em></div>
+      <div class="gift-img" style="background-image:url('assets/gift-2.jpg')"></div>
+    </article>
+
+    <!-- 3 -->
+    <article class="gift-card">
+      <div class="gift-label"><em>GIFT FOR HIM</em></div>
+      <div class="gift-img" style="background-image:url('assets/gift-3.jpg')"></div>
+    </article>
+
+    <!-- 4 -->
+    <article class="gift-card">
+      <div class="gift-label"><em>SPECIAL ITEMS FOR YOU</em></div>
+      <div class="gift-img" style="background-image:url('assets/gift-4.jpg')"></div>
+    </article>
+
+    <!-- 5 -->
+    <article class="gift-card">
+      <div class="gift-label"><em>C-LUXURY DIGITAL CARDS<br/>FOR YOU</em></div>
+      <div class="gift-img" style="background-image:url('assets/gift-5.jpg')"></div>
+    </article>
+
+    <!-- duplicate of 1 (safe loop back) -->
+    <article class="gift-card" data-loop="end">
+      <div class="gift-label"><em>C-LUXURY WISHLIST</em></div>
+      <div class="gift-img" style="background-image:url('assets/gift-1.jpg')"></div>
+    </article>
+  </div>
+</section>
+
   <script src="main.js"></script>
 </body>
 </html>
