--- a/index.html
+++ b/index.html
@@ -114,42 +114,45 @@
   </div>
 
   <div class="gift-scroller" id="giftScroller" aria-label="C-LUXURY gift banners">
+
     <!-- 1 -->
-<article class="gift-card" data-loop="start">
-  <div class="gift-label"><em>C-LUXURY WISHLIST</em></div>
-  <div class="gift-img" style="background-image:url('assets/wishlist.jpg')"></div>
-</article>
+    <article class="gift-card" data-loop="start">
+      <div class="gift-label"><em>C-LUXURY WISHLIST</em></div>
+      <div class="gift-img" style="background-image:url('assets/wishlist.jpg')"></div>
+    </article>
 
-<!-- 2 -->
-<article class="gift-card">
-  <div class="gift-label"><em>GIFTS FOR HER</em></div>
-  <div class="gift-img" style="background-image:url('assets/gift-her.jpg')"></div>
-</article>
+    <!-- 2 -->
+    <article class="gift-card">
+      <div class="gift-label"><em>GIFTS FOR HER</em></div>
+      <div class="gift-img" style="background-image:url('assets/gift-her.jpg')"></div>
+    </article>
 
-<!-- 3 -->
-<article class="gift-card">
-  <div class="gift-label"><em>GIFT FOR HIM</em></div>
-  <div class="gift-img" style="background-image:url('assets/gift-him.jpg')"></div>
-</article>
+    <!-- 3 -->
+    <article class="gift-card">
+      <div class="gift-label"><em>GIFT FOR HIM</em></div>
+      <div class="gift-img" style="background-image:url('assets/gift-him.jpg')"></div>
+    </article>
 
-<!-- 4 -->
-<article class="gift-card">
-  <div class="gift-label"><em>SPECIAL ITEMS FOR YOU</em></div>
-  <div class="gift-img" style="background-image:url('assets/special-items.jpg')"></div>
-</article>
+    <!-- 4 -->
+    <article class="gift-card">
+      <div class="gift-label"><em>SPECIAL ITEMS FOR YOU</em></div>
+      <div class="gift-img" style="background-image:url('assets/special-items.jpg')"></div>
+    </article>
 
-<!-- 5 -->
-<article class="gift-card">
-  <div class="gift-label"><em>C-LUXURY DIGITAL CARDS<br>FOR YOU</em></div>
-  <div class="gift-img" style="background-image:url('assets/digital-cards.jpg')"></div>
-</article>
+    <!-- 5 -->
+    <article class="gift-card">
+      <div class="gift-label"><em>C-LUXURY DIGITAL CARDS<br>FOR YOU</em></div>
+      <div class="gift-img" style="background-image:url('assets/digital-cards.jpg')"></div>
+    </article>
 
-<!-- duplicate of 1 (safe loop back) -->
-<article class="gift-card" data-loop="end">
-  <div class="gift-label"><em>C-LUXURY WISHLIST</em></div>
-  <div class="gift-img" style="background-image:url('assets/wishlist.jpg')"></div>
-</article>
+    <!-- duplicate of 1 (safe loop back) -->
+    <article class="gift-card" data-loop="end">
+      <div class="gift-label"><em>C-LUXURY WISHLIST</em></div>
+      <div class="gift-img" style="background-image:url('assets/wishlist.jpg')"></div>
+    </article>
 
+  </div>
+</section>
   <script src="main.js"></script>
 </body>
 </html>
