--- a/index.html
+++ b/index.html
@@ -153,6 +153,126 @@
 
   </div>
 </section>
-  <script src="main.js"></script>
+
+
+  
+<!-- =========================
+     C NEW ARRIVALS (Pinned left + auto slider right)
+     ========================= -->
+<section class="new-arrivals" id="new-arrivals">
+  <div class="na-wrap">
+    <header class="na-head">
+      <h2 class="na-title">C NEW ARRIVALS</h2>
+    </header>
+
+    <div class="na-grid">
+      <!-- LEFT PINNED PRODUCT (does not move) -->
+      <aside class="na-left" aria-label="Featured new arrival">
+        <div class="na-left-media">
+          <img id="naLeftImg" src="assets/na-1-main.jpg" alt="New arrival product preview" />
+          <div class="na-left-fade" id="naLeftFade" aria-hidden="true"></div>
+        </div>
+
+        <div class="na-left-meta">
+          <div class="na-left-name" id="naLeftName">C-LUXURY ITEM 01</div>
+          <button class="na-left-more" type="button" id="naLeftMore">SEE MORE</button>
+        </div>
+      </aside>
+
+     <!-- RIGHT SLIDER -->
+      <div class="na-right">
+        <div class="na-slider" id="naSlider" aria-label="New arrivals carousel">
+          <!-- CARD 1 -->
+          <article class="na-card" data-name="C-LUXURY ITEM 01"
+            data-main="assets/na-1-main.jpg"
+            data-mock1="assets/na-1-mock1.jpg"
+            data-mock2="assets/na-1-mock2.jpg">
+            <div class="na-card-img" style="background-image:url('assets/na-1-main.jpg')"></div>
+            <button class="na-card-more" type="button">SEE MORE</button>
+          </article>
+
+          <!-- CARD 2 -->
+          <article class="na-card" data-name="C-LUXURY ITEM 02"
+            data-main="assets/na-2-main.jpg"
+            data-mock1="assets/na-2-mock1.jpg"
+            data-mock2="assets/na-2-mock2.jpg">
+            <div class="na-card-img" style="background-image:url('assets/na-2-main.jpg')"></div>
+            <button class="na-card-more" type="button">SEE MORE</button>
+          </article>
+
+          <!-- CARD 3 -->
+          <article class="na-card" data-name="C-LUXURY ITEM 03"
+            data-main="assets/na-3-main.jpg"
+            data-mock1="assets/na-3-mock1.jpg"
+            data-mock2="assets/na-3-mock2.jpg">
+            <div class="na-card-img" style="background-image:url('assets/na-3-main.jpg')"></div>
+            <button class="na-card-more" type="button">SEE MORE</button>
+          </article>
+
+          <!-- CARD 4 -->
+          <article class="na-card" data-name="C-LUXURY ITEM 04"
+            data-main="assets/na-4-main.jpg"
+            data-mock1="assets/na-4-mock1.jpg"
+            data-mock2="assets/na-4-mock2.jpg">
+            <div class="na-card-img" style="background-image:url('assets/na-4-main.jpg')"></div>
+            <button class="na-card-more" type="button">SEE MORE</button>
+          </article>
+
+          <!-- CARD 5 -->
+          <article class="na-card" data-name="C-LUXURY ITEM 05"
+            data-main="assets/na-5-main.jpg"
+            data-mock1="assets/na-5-mock1.jpg"
+            data-mock2="assets/na-5-mock2.jpg">
+            <div class="na-card-img" style="background-image:url('assets/na-5-main.jpg')"></div>
+            <button class="na-card-more" type="button">SEE MORE</button>
+          </article>
+
+          <!-- DUPLICATE first cards for smooth loop (optional but recommended) -->
+          <article class="na-card na-dup" aria-hidden="true"
+            data-name="C-LUXURY ITEM 01"
+            data-main="assets/na-1-main.jpg"
+            data-mock1="assets/na-1-mock1.jpg"
+            data-mock2="assets/na-1-mock2.jpg">
+            <div class="na-card-img" style="background-image:url('assets/na-1-main.jpg')"></div>
+            <button class="na-card-more" type="button" tabindex="-1">SEE MORE</button>
+          </article>
+          <article class="na-card na-dup" aria-hidden="true"
+            data-name="C-LUXURY ITEM 02"
+            data-main="assets/na-2-main.jpg"
+            data-mock1="assets/na-2-mock1.jpg"
+            data-mock2="assets/na-2-mock2.jpg">
+            <div class="na-card-img" style="background-image:url('assets/na-2-main.jpg')"></div>
+            <button class="na-card-more" type="button" tabindex="-1">SEE MORE</button>
+          </article>
+        </div>
+
+        <!-- NAME BELOW SLIDER -->
+        <div class="na-namebar">
+          <span class="na-now">NOW:</span>
+          <span class="na-name" id="naName">C-LUXURY ITEM 01</span>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- MODAL (fade in reveal) -->
+  <div class="na-modal" id="naModal" aria-hidden="true">
+    <div class="na-modal-backdrop" data-close="1"></div>
+    <div class="na-modal-panel" role="dialog" aria-modal="true" aria-label="Product preview">
+      <button class="na-modal-x" type="button" data-close="1" aria-label="Close">✕</button>
+      <div class="na-modal-title" id="naModalTitle">PRODUCT</div>
+
+      <div class="na-modal-mocks">
+        <img id="naModalMock1" src="" alt="Mockup 1" />
+        <img id="naModalMock2" src="" alt="Mockup 2" />
+      </div>
+    </div>
+  </div>
+</section>
+
+<script src="main.js"></script>
 </body>
 </html>
+
+
+  
