--- a/index.html
+++ b/index.html
@@ -151,6 +151,11 @@
       <div class="gift-img" style="background-image:url('assets/wishlist.jpg')"></div>
     </article>
 
+  
+ <script src="main.js"></script>
+</body>
+</html>
+
   </div>
 </section>
 
